@@ -4,6 +4,7 @@
 - Fix: [#15620] Placing track designs at locations blocked by anything results in wrong error message.
 - Fix: [#15843] Tile Inspector can be resized too small.
 - Fix: [#15844] Tile Inspector has inconsistent text colours.
+- Fix: [#15878] Crash when opening a ride window for a corrupted vehicle.
 
 0.3.5 (2021-11-06)
 ------------------------------------------------------------------------
